--- a/Frontend/assets/css/style.css
+++ b/Frontend/assets/css/style.css
@@ -12,7 +12,7 @@ body {
   background-color: #fff;
   color: #000;
 }
-
+   
 .header {
   display: flex;
   justify-content: center;
@@ -55,7 +55,9 @@ body {
   position: relative;
   border-radius: 20px;
   overflow: hidden;
-  align-items: center;
+      display: flex
+;
+    justify-content: center;
 }
 
 .card img {
