--- a/Frontend/assets/css/style.css
+++ b/Frontend/assets/css/style.css
@@ -146,7 +146,8 @@ body {
   padding: 2rem;
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  align-items: center;
+  text-align: center;
 }
 
 #user-overlay h2,
@@ -162,15 +163,12 @@ body {
   border-radius: 8px;
   border: none;
   cursor: pointer;
-}
-
-#user-overlay button {
-  background-color: #0066cc;
-  color: white;
+  background-color: #ffffff00;
 }
 
 #user-overlay button:hover {
-  background-color: #004f99;
+  font-weight: bold;
+  cursor: pointer;
 }
 
 .btn-close-overlay {
@@ -179,6 +177,19 @@ body {
   cursor: pointer;
   background: none;
   border: none;
+}
+
+#close-login-modal,
+#close-register-modal {
+  position: absolute;
+  top: 0.5rem;
+  right: 1rem;
+  font-size: 1.2rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+  color: #333;
+  width: auto;
 }
 
 
@@ -192,7 +203,6 @@ body {
 }
 
 .burger-menu .submenu {
-  font-size: 0.9rem;
   font-weight: normal;
   color: #333;
   padding: 1rem;
@@ -239,10 +249,48 @@ body {
 
 
 @media (min-width: 768px ){ 
+  .header{
+    background-color: #ffffff;
+  }
   .main-content {
     flex-direction: row;
     justify-content: center;
     align-items: center;
-    gap: 2rem;
+    gap: 20%;
+    background-image: url('../img/bg-index.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-blend-mode: multiply; /* optionnel : ajoute un effet si tu veux */
+    background-color: rgba(255, 255, 255, 0.5); /* optionnel */
+    padding: 3rem;
+    height: 90vh;
+  }
+
+  .card{
+    width: 300px;
+    height: 300px;
+    background-color: #ffffffce; /* pour un peu d'opacité blanche */
+    backdrop-filter: blur(1px);
+  }
+
+  .card img {
+    display: none;
+  }
+
+  .card-text {
+    position: static;
+    background: none;
+    padding: 10px;
+    margin-top: 40%;
+  }
+
+  main{
+    height: 70vh;
+  }
+
+  .main-image{
+    display: block;
+    width: 100%;
   }
 }
